--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
     "dev:start": "run-p build:routify dev:vite",
     "dev:vite": "vite --host --port 5001",
     "#Utilities": "Various utilities",
-    "validate": "svelte-check"
+    "validate": "npx -y -p svelte-check svelte-check"
   },
   "devDependencies": {
-    "@roxi/routify": "^2.18.0",
+    "@roxi/routify": "^2.18.8",
     "@sveltejs/vite-plugin-svelte": "*",
-    "@tsconfig/svelte": "^1.0.10",
+    "@tsconfig/svelte": "^3.0.0",
     "cordova-res": "^0.15.4",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.37.0",
-    "svelte-preprocess": "^4.7.3",
-    "typescript": "^4.2.4",
-    "vite": "^2.2.3",
-    "vite-aliases": "^0.6.3",
-    "vite-plugin-compression": "^0.2.5",
-    "vite-tsconfig-paths": "^3.3.10"
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.7.1",
+    "svelte": "^3.50.1",
+    "svelte-preprocess": "^4.10.7",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.6",
+    "vite-aliases": "^0.9.2",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-tsconfig-paths": "^3.5.1"
   },
   "dependencies": {
-    "@capacitor/android": "^3.0.1",
-    "@capacitor/cli": "^3.0.0",
-    "@capacitor/core": "^3.0.0",
-    "@capacitor/ios": "^3.0.1"
+    "@capacitor/android": "^4.3.0",
+    "@capacitor/cli": "^4.3.0",
+    "@capacitor/core": "^4.3.0",
+    "@capacitor/ios": "^4.3.0"
   }
 }
